# Gear

./: .gitignore  .gitmodules  CMakeLists.txt  base64.lua  build.lua  glad.lua  glfw.cmake  imgui.cmake  imgui.lua  json.lua  main.cpp  stb.cmake  stb.lua  stb_impl.cpp  tinyxml2.lua  todo.txt
cmake/: glfw.cmake  imgui.cmake  remotery.cmake  tinygltf.cmake
examples/3d/: CMakeLists.txt
examples/3d/assets/: Fabric_Boucle.yaml  TexturesCom_Fabric_Boucle_512_albedo.tif
examples/3d/assets/models/Corset/: CMakeLists.txt  Corset_baseColor.yaml  Corset_normal.yaml  Corset_occlusionRoughnessMetallic.yaml
examples/3d/assets/models/SciFiHelmet/: CMakeLists.txt  SciFiHelmet.gltf  SciFiHelmet_AmbientOcclusion.yaml  SciFiHelmet_BaseColor.yaml  SciFiHelmet_MetallicRoughness.yaml  SciFiHelmet_Normal.yaml
examples/3d/assets/shaders/: default.vert  default.yaml  fullscreen.vert  pbr.glsl  shaded.frag  srgb.glsl  testshd.yaml  textured.frag
examples/3d/src/: main.cpp
examples/breakout/: CMakeLists.txt  breakout.lua
examples/breakout/assets/shaders/: textured.frag  textured.yaml
examples/breakout/src/: main.cpp
examples/gearhell/: CMakeLists.txt
examples/gearhell/src/: main.cpp
examples/shmup/: CMakeLists.txt  shmup.lua
examples/shmup/assets/fonts/: defaultFont.yaml
examples/shmup/assets/sprites/: Sprites.tsx  sprites.yaml
examples/shmup/fonts/: defaultFont.yaml
examples/shmup/sprites/: sprites.yaml
examples/shmup/src/: Collisions.cpp  Collisions.h  main.cpp
examples/shmup/src/shaders/: font.frag  font.yaml  prim.vert  prim.yaml  simple_textured.vert  textured.yaml
gear/: CMakeLists.txt  assets.lua  gear.lua  main.cpp
gear/app/: CMakeLists.txt
gear/app/include/gear/: Application.h  ApplicationAdapter.h  Input.h
gear/app/src/: Application.cpp  Input.cpp
gear/assets/: CMakeLists.txt
gear/assets/fbs/: CMakeLists.txt  assets.fbs  bitmapFont.fbs  common.fbs  font.fbs  generate_flatbuffers.lua  mesh.fbs  shader.fbs  sprite.fbs  texture.fbs  tileset.fbs
gear/assets/include/gear/: Assets.h  TileMap.h  TileSet.h
gear/assets/src/: Assets.cpp  TileMap.cpp  TileSet.cpp
gear/core/: CMakeLists.txt
gear/core/include/gear/: Allocators.h  CollisionShape.h  Job.h  Transform.h  View.h
gear/core/src/: Allocators.cpp  Job.cpp  Transform.cpp  View.cpp
gear/ecs/: CMakeLists.txt
gear/ecs/include/gear/ecs/: Archetype.h  ChunkView.h  CommandBuffer.h  Component.h  Config.h  Prefab.h  Serde.h  System.h
gear/ecs/src/: Archetype.cpp  CommandBuffer.cpp  Component.cpp  Core.cpp  Prefab.cpp  Serde.cpp
gear/fbs/: assets.fbs  common.fbs  font.fbs  generate_flatbuffers.lua  map.fbs  shader.fbs  sprite.fbs  test.fbs  texture.fbs  texture_atlas.fbs  tileset.fbs
gear/g2d/: CMakeLists.txt  generate_glad.lua
gear/g2d/glad/include/glad/: glad.h
gear/g2d/glad/src/: glad.c
gear/g2d/include/gear/g2d/: PrimDraw.h  RenderSystem.h  Sprite.h  SpriteBatch.h  Text.h  Texture.h  TilemapSystem.h  g2d.h
gear/g2d/src/: DebugUI.cpp  FontCache.cpp  FontCache.h  G2DInstance.cpp  G2DInstance.h  PrimDraw.cpp  PrimDraw.h  RenderSystem.cpp  Shader.cpp  Shader.h  Sprite.cpp  SpriteBatch.cpp  SpriteBatch.h  Text.cpp  Texture.cpp  Texture.h  TilemapSystem.cpp
gear/g3d/: CMakeLists.txt  generate_glad.lua
gear/g3d/include/gear/g3d/: Components.h  g3d.h
gear/g3d/src/: Buffer.cpp  Buffer.h  DrawScene.cpp  DrawScene.h  GlObject.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  StreamBuffer.cpp  StreamBuffer.h  Texture.cpp  Texture.h  g3d.cpp
gear/gapi/: CMakeLists.txt
gear/gapi/include/gear/: gapi.h
gear/include/gear/: Application.h  ApplicationAdapter.h  AssetManager.h  Assets.h  BitmapFont.h  CollisionDetection.h  CoreComponents.h  DI.h  DebugUI.h  ECS.h  ECS_a.h  Input.h  Job.h  KeyboardKeys.h  RenderSystem.h  Shader.h  Sprite.h  SpriteBatch.h  Text.h  Texture.h  TextureAtlas.h  Util.h  World.h
gear/include/gear/ECS/: Archetype.h  CommandBuffer.h  Component.h  Config.h  Core.h  ECS.h  Prefab.h  System.h
gear/include/gear/map/: Map.h  TileMap.h  TileSet.h  TilemapSystem.h
gear/src/: Application.cpp  AssetManager.cpp  Assets.cpp  BitmapFont.cpp  CollisionDetection.cpp  DebugUI.cpp  Input.cpp  Job.cpp  PrimDraw.cpp  RenderSystem.cpp  Shader.cpp  SpriteBatch.cpp  Text.cpp  Texture.cpp  TextureAtlas.cpp  stb_impl.cpp
gear/src/ECS/: Archetype.cpp  CommandBuffer.cpp  Component.cpp  Core.cpp  ECS.cpp  Prefab.cpp  Serde.cpp
gear/src/map/: Map.cpp  TileMap.cpp  TileSet.cpp  TilemapSystem.cpp
gear/utils/: CMakeLists.txt
gear/utils/include/gear/: Util.h
luabuild/: crules.lua  ninja.lua  targets.lua
tools/: CMakeLists.txt
tools/asset_build/: CMakeLists.txt
tools/asset_build/src/: asset_build.cpp
tools/bundler/: CMakeLists.txt  bundler.cpp
tools/font_pack/: CMakeLists.txt  font_pack.lua  main.cpp
tools/map_pack/: CMakeLists.txt  main.cpp  map_pack.lua  map_packer.cpp
tools/mesh_packer/: CMakeLists.txt  mesh_packer.cpp
tools/shader_pack/: CMakeLists.txt  shader_pack.lua  shader_packer.cpp  shader_packer.lua  template.glsl.in
tools/sprite_pack/: CMakeLists.txt  main.cpp
tools/texture/: CMakeLists.txt  texture.cpp  texture.h
tools/texture_pack/: CMakeLists.txt  TexturePacker.cpp  TexturePacker.h  main.cpp  texture_packer.lua
tools/tileset_pack/: CMakeLists.txt  tileset_pack.cpp  tileset_pack.lua
